--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <script src="https://cdn.tailwindcss.com"></script>
+        <title>Document</title>
+    </head>
     <script>
-        function sendotp(){
+        function sendotp() {
             var email = document.getElementById("email").value;
             console.log(email);
             // send using fetch
             fetch("/accounts/send_otp/", {
                 method: "POST",
                 headers: {
-                    "X-CSRFToken": document.getElementsByName("csrfmiddlewaretoken")[0].value,
-                    "Content-Type": "application/json"
+                    "X-CSRFToken": document.getElementsByName(
+                        "csrfmiddlewaretoken"
+                    )[0].value,
+                    "Content-Type": "application/json",
                 },
                 body: JSON.stringify({
-                    email: email
+                    email: email,
+                }),
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    console.log(data);
                 })
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log(data);
-            })
-            .catch(error => {
-                console.log(error);
-            })
+                .catch((error) => {
+                    console.log(error);
+                });
 
             // var csrftoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-            
+
             // var xhttp = new XMLHttpRequest();
             // xhttp.open("POST", "/accounts/send_otp/", true);
             // xhttp.setRequestHeader("X-CSRFToken", csrftoken);
@@ -42,15 +44,202 @@
             // };
         }
     </script>
-<body>
-    <form action="/accounts/login_teacher/" method="post">
-        {% csrf_token %}
-        <label for="email">email</label>
-        <input type="text" name="email" id="email" required>
-        <label for="otp">OTP</label>
-        <input type="text" name="OTP" id="OTP" required>
-        <input type="button" value="Send OTP" onclick="sendotp()">
-        <input type="submit" value="Login">
-    </form>
-</body>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        primaryPurple: "#667AFF",
+                        secondaryPurple: "#9E66FF",
+                        black: "#333333",
+                        gray: "#777777",
+                        lightGray: "#D9D9D9",
+                    },
+                },
+            },
+        };
+    </script>
+    <style>
+        .label-floating input:not(:placeholder-shown) {
+            padding-top: 1.4rem;
+        }
+        .label-floating input:not(:placeholder-shown) ~ label {
+            font-size: 0.8rem;
+            transition: all 0.2s ease-in-out;
+            color: #667aff;
+        }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+
+        input[type="number"] {
+            -moz-appearance: textfield;
+        }
+    </style>
+    <body
+        class="bg-gradient-to-t from-secondaryPurple to-primaryPurple h-screen flex"
+    >
+        <div class="m-auto bg-white p-4 w-11/12 max-w-md rounded-md">
+            <form
+                action="/accounts/login_teacher/"
+                method="post"
+                class="flex flex-col gap-3 py-3 px-2 md:py-6 md:px-3"
+            >
+                {% csrf_token %}
+                <h1 class="text-black text-2xl md:text-3xl font-bold">
+                    Welcome to the University Result Analysis Portal!
+                </h1>
+                <span>
+                    <h2 class="text-black text-xl md:text-2xl font-bold">
+                        Login
+                    </h2>
+                    <p class="text-black">
+                        Please enter your credentials to access the portal
+                    </p>
+                </span>
+                <div
+                    class="relative border rounded shadow appearance-none label-floating"
+                >
+                    <input
+                        class="w-full py-2 px-3 text-black leading-normal rounded"
+                        id="email"
+                        type="text"
+                        name="email"
+                        placeholder="Email"
+                    />
+                    <label
+                        class="absolute block text-black top-0 left-0 w-full px-3 py-2 leading-normal"
+                        for="email"
+                    >
+                        Email
+                    </label>
+                </div>
+                <button
+                    type="button"
+                    onclick="sendotp()"
+                    class="bg-primaryPurple uppercase text-white rounded-md py-2"
+                >
+                    Send OTP
+                </button>
+                <div
+                    class="flex justify-between md:justify-around"
+                    id="inputfields"
+                >
+                    <input
+                        type="number"
+                        maxlength="1"
+                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                        disabled
+                    />
+                    <input
+                        type="number"
+                        maxlength="1"
+                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                        disabled
+                    />
+                    <input
+                        type="number"
+                        maxlength="1"
+                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                        disabled
+                    />
+                    <input
+                        type="number"
+                        maxlength="1"
+                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                        disabled
+                    />
+                </div>
+                <input type="text" name="OTP" id="otp" hidden />
+                <button
+                    type="submit"
+                    class="uppercase bg-primaryPurple text-white rounded-md py-2"
+                >
+                    Login
+                </button>
+            </form>
+        </div>
+
+        <script>
+            const input = document.querySelectorAll("#inputfields input");
+            const inputField = document.getElementById("inputfields");
+            const otp = document.getElementById("otp");
+            let inputCount = 0,
+                finalInput = "";
+
+            const updateInputConfig = (element, disabledStatus) => {
+                element.disabled = disabledStatus;
+                if (!disabledStatus) {
+                    element.focus();
+                } else {
+                    element.blur();
+                }
+            };
+
+            input.forEach((element) => {
+                element.addEventListener("keyup", (e) => {
+                    e.target.value = e.target.value.replace(/[^0-9]/g, "");
+                    let { value } = e.target;
+
+                    if (value.length == 1) {
+                        updateInputConfig(e.target, true);
+                        if (inputCount <= 3 && e.key != "Backspace") {
+                            finalInput += value;
+                            if (inputCount < 3) {
+                                updateInputConfig(
+                                    e.target.nextElementSibling,
+                                    false
+                                );
+                            }
+                        }
+                        inputCount += 1;
+                    } else if (value.length == 0 && e.key == "Backspace") {
+                        finalInput = finalInput.substring(
+                            0,
+                            finalInput.length - 1
+                        );
+                        if (inputCount == 0) {
+                            updateInputConfig(e.target, false);
+                            return false;
+                        }
+                        updateInputConfig(e.target, true);
+                        e.target.previousElementSibling.value = "";
+                        updateInputConfig(
+                            e.target.previousElementSibling,
+                            false
+                        );
+                        inputCount -= 1;
+                    } else if (value.length > 1) {
+                        e.target.value = value.split("")[0];
+                    }
+                    otp.value = finalInput;
+                });
+            });
+            window.addEventListener("keyup", (e) => {
+                if (inputCount > 3) {
+                    if (e.key == "Backspace") {
+                        finalInput = finalInput.substring(
+                            0,
+                            finalInput.length - 1
+                        );
+                        updateInputConfig(inputField.lastElementChild, false);
+                        inputField.lastElementChild.value = "";
+                        inputCount -= 1;
+                    }
+                }
+            });
+            const startInput = () => {
+                inputCount = 0;
+                finalInput = "";
+                input.forEach((element) => {
+                    element.value = "";
+                });
+                updateInputConfig(inputField.firstElementChild, false);
+            };
+
+            window.onload = startInput();
+        </script>
+    </body>
 </html>
