--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,44 +6,7 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <title>Document</title>
     </head>
-    <script>
-        function sendotp() {
-            var email = document.getElementById("email").value;
-            console.log(email);
-            // send using fetch
-            fetch("/accounts/send_otp/", {
-                method: "POST",
-                headers: {
-                    "X-CSRFToken": document.getElementsByName(
-                        "csrfmiddlewaretoken"
-                    )[0].value,
-                    "Content-Type": "application/json",
-                },
-                body: JSON.stringify({
-                    email: email,
-                }),
-            })
-                .then((response) => response.json())
-                .then((data) => {
-                    console.log(data);
-                })
-                .catch((error) => {
-                    console.log(error);
-                });
 
-            // var csrftoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
-
-            // var xhttp = new XMLHttpRequest();
-            // xhttp.open("POST", "/accounts/send_otp/", true);
-            // xhttp.setRequestHeader("X-CSRFToken", csrftoken);
-            // xhttp.send("email="+email);
-            // // xhttp.onreadystatechange = function() {
-            // //     if (this.readyState == 4 && this.status == 200) {
-            // //         console.log("success");
-            // //     }
-            // };
-        }
-    </script>
     <script>
         tailwind.config = {
             theme: {
@@ -92,153 +55,190 @@
                     Welcome to the University Result Analysis Portal!
                 </h1>
                 <span>
-                    
                     <p class="text-black">
                         Please enter your credentials to access the portal
                     </p>
                 </span>
-                <div
-                    class="relative border rounded shadow appearance-none label-floating"
-                >
-                    <input
-                        class="w-full py-2 px-3 text-black leading-normal rounded"
-                        id="email"
-                        type="text"
-                        name="email"
-                        placeholder="Email"
-                    />
-                    <label
-                        class="absolute block text-black top-0 left-0 w-full px-3 py-2 leading-normal"
-                        for="email"
+                {% comment %} email block {% endcomment %}
+                <div class="flex flex-col gap-3" id="emailDiv">
+                    <div
+                        class="relative border rounded shadow appearance-none label-floating"
                     >
-                        Email
-                    </label>
+                        <input
+                            class="w-full py-2 px-3 text-black leading-normal rounded"
+                            id="email"
+                            type="text"
+                            name="email"
+                            placeholder="Email"
+                        />
+                        <label
+                            class="absolute block text-black top-0 left-0 w-full px-3 py-2 leading-normal"
+                            for="email"
+                        >
+                            Email
+                        </label>
+                    </div>
+                    <button
+                        type="button"
+                        onclick="sendotp()"
+                        class="w-full bg-primaryPurple uppercase text-white rounded-md py-2"
+                    >
+                        Send OTP
+                    </button>
                 </div>
-                <button
-                    type="button"
-                    onclick="sendotp()"
-                    class="bg-primaryPurple uppercase text-white rounded-md py-2"
-                >
-                    Send OTP
-                </button>
-                <div
-                    class="flex justify-between md:justify-around"
-                    id="inputfields"
-                >
-                    <input
-                        type="number"
-                        maxlength="1"
-                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
-                        disabled
-                    />
-                    <input
-                        type="number"
-                        maxlength="1"
-                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
-                        disabled
-                    />
-                    <input
-                        type="number"
-                        maxlength="1"
-                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
-                        disabled
-                    />
-                    <input
-                        type="number"
-                        maxlength="1"
-                        class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
-                        disabled
-                    />
+                {% comment %} otp block {% endcomment %}
+                <div class="flex flex-col gap-3 hidden" id="otpDiv">
+                    <div
+                        class="flex justify-between md:justify-around"
+                        id="inputfields"
+                    >
+                        <input
+                            type="number"
+                            maxlength="1"
+                            class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                            disabled
+                        />
+                        <input
+                            type="number"
+                            maxlength="1"
+                            class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                            disabled
+                        />
+                        <input
+                            type="number"
+                            maxlength="1"
+                            class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                            disabled
+                        />
+                        <input
+                            type="number"
+                            maxlength="1"
+                            class="h-14 w-14 border-2 border-lightGray rounded-md focus:border-primaryPurple focus:outline-none text-xl text-center"
+                            disabled
+                        />
+                    </div>
+                    <input type="text" name="OTP" id="otp" hidden />
+                    <button
+                        type="submit"
+                        class="w-full uppercase bg-primaryPurple text-white rounded-md py-2"
+                    >
+                        Login
+                    </button>
                 </div>
-                <input type="text" name="OTP" id="otp" hidden />
-                <button
-                    type="submit"
-                    class="uppercase bg-primaryPurple text-white rounded-md py-2"
-                >
-                    Login
-                </button>
             </form>
         </div>
     </body>
 
-        <script>
-            const input = document.querySelectorAll("#inputfields input");
-            const inputField = document.getElementById("inputfields");
-            const otp = document.getElementById("otp");
-            let inputCount = 0,
-                finalInput = "";
+    <script>
+        const input = document.querySelectorAll("#inputfields input");
+        const inputField = document.getElementById("inputfields");
+        const otp = document.getElementById("otp");
+        let inputCount = 0,
+            finalInput = "";
 
-            const updateInputConfig = (element, disabledStatus) => {
-                element.disabled = disabledStatus;
-                if (!disabledStatus) {
-                    element.focus();
-                } else {
-                    element.blur();
+        const updateInputConfig = (element, disabledStatus) => {
+            element.disabled = disabledStatus;
+            if (!disabledStatus) {
+                element.focus();
+            } else {
+                element.blur();
+            }
+        };
+
+        input.forEach((element) => {
+            element.addEventListener("keyup", (e) => {
+                e.target.value = e.target.value.replace(/[^0-9]/g, "");
+                let { value } = e.target;
+
+                if (value.length == 1) {
+                    updateInputConfig(e.target, true);
+                    if (inputCount <= 3 && e.key != "Backspace") {
+                        finalInput += value;
+                        if (inputCount < 3) {
+                            updateInputConfig(
+                                e.target.nextElementSibling,
+                                false
+                            );
+                        }
+                    }
+                    inputCount += 1;
+                } else if (value.length == 0 && e.key == "Backspace") {
+                    finalInput = finalInput.substring(0, finalInput.length - 1);
+                    if (inputCount == 0) {
+                        updateInputConfig(e.target, false);
+                        return false;
+                    }
+                    updateInputConfig(e.target, true);
+                    e.target.previousElementSibling.value = "";
+                    updateInputConfig(e.target.previousElementSibling, false);
+                    inputCount -= 1;
+                } else if (value.length > 1) {
+                    e.target.value = value.split("")[0];
                 }
-            };
-
+                otp.value = finalInput;
+            });
+        });
+        window.addEventListener("keyup", (e) => {
+            if (inputCount > 3) {
+                if (e.key == "Backspace") {
+                    finalInput = finalInput.substring(0, finalInput.length - 1);
+                    updateInputConfig(inputField.lastElementChild, false);
+                    inputField.lastElementChild.value = "";
+                    inputCount -= 1;
+                }
+            }
+        });
+        const startInput = () => {
+            inputCount = 0;
+            finalInput = "";
             input.forEach((element) => {
-                element.addEventListener("keyup", (e) => {
-                    e.target.value = e.target.value.replace(/[^0-9]/g, "");
-                    let { value } = e.target;
-
-                    if (value.length == 1) {
-                        updateInputConfig(e.target, true);
-                        if (inputCount <= 3 && e.key != "Backspace") {
-                            finalInput += value;
-                            if (inputCount < 3) {
-                                updateInputConfig(
-                                    e.target.nextElementSibling,
-                                    false
-                                );
-                            }
-                        }
-                        inputCount += 1;
-                    } else if (value.length == 0 && e.key == "Backspace") {
-                        finalInput = finalInput.substring(
-                            0,
-                            finalInput.length - 1
-                        );
-                        if (inputCount == 0) {
-                            updateInputConfig(e.target, false);
-                            return false;
-                        }
-                        updateInputConfig(e.target, true);
-                        e.target.previousElementSibling.value = "";
-                        updateInputConfig(
-                            e.target.previousElementSibling,
-                            false
-                        );
-                        inputCount -= 1;
-                    } else if (value.length > 1) {
-                        e.target.value = value.split("")[0];
-                    }
-                    otp.value = finalInput;
-                });
+                element.value = "";
             });
-            window.addEventListener("keyup", (e) => {
-                if (inputCount > 3) {
-                    if (e.key == "Backspace") {
-                        finalInput = finalInput.substring(
-                            0,
-                            finalInput.length - 1
-                        );
-                        updateInputConfig(inputField.lastElementChild, false);
-                        inputField.lastElementChild.value = "";
-                        inputCount -= 1;
-                    }
-                }
-            });
-            const startInput = () => {
-                inputCount = 0;
-                finalInput = "";
-                input.forEach((element) => {
-                    element.value = "";
-                });
-                updateInputConfig(inputField.firstElementChild, false);
-            };
+            updateInputConfig(inputField.firstElementChild, false);
+        };
 
-            window.onload = startInput();
-        </script>
-    
+        window.onload = startInput();
+
+        // otp code
+        const otpDiv = document.getElementById("otpDiv");
+        const emailDiv = document.getElementById("emailDiv");
+        function sendotp() {
+            var email = document.getElementById("email").value;
+            console.log(email);
+            // send using fetch
+            fetch("/accounts/send_otp/", {
+                method: "POST",
+                headers: {
+                    "X-CSRFToken": document.getElementsByName(
+                        "csrfmiddlewaretoken"
+                    )[0].value,
+                    "Content-Type": "application/json",
+                },
+                body: JSON.stringify({
+                    email: email,
+                }),
+            })
+                .then((response) => response.json())
+                .then((data) => {
+                    emailDiv.classList.add("hidden");
+                    otpDiv.classList.remove("hidden");
+                    console.log(data);
+                })
+                .catch((error) => {
+                    console.log(error);
+                });
+
+            // var csrftoken = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+
+            // var xhttp = new XMLHttpRequest();
+            // xhttp.open("POST", "/accounts/send_otp/", true);
+            // xhttp.setRequestHeader("X-CSRFToken", csrftoken);
+            // xhttp.send("email="+email);
+            // // xhttp.onreadystatechange = function() {
+            // //     if (this.readyState == 4 && this.status == 200) {
+            // //         console.log("success");
+            // //     }
+            // };
+        }
+    </script>
 </html>
