--- a/results/templates/convert.html
+++ b/results/templates/convert.html
@@ -1,45 +1,211 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Result CSV Normalization</title>
-</head>
-<body>
-    <h1>Result CSV Normalization</h1>
-    {%csrf_token%}
-    <form id="pdfForm" method="post" enctype="multipart/form-data">
+    <head>
+        <title>Result CSV Normalization</title>
 
-        <input type="file" name="pdf" accept=".csv">
-        <button type="button" id="btn">Upload CSV</button>
-    </form>
-    <br>
-    <div id="result"></div>
+        <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                theme: {
+                    extend: {
+                        colors: {
+                            primaryPurple: "#667AFF",
+                            secondaryPurple: "#9E66FF",
+                            black: "#333333",
+                            gray: "#777777",
+                            lightGray: "#D9D9D9",
+                        },
+                    },
+                },
+            };
+        </script>
+        <style>
+            .pill-button {
+                display: inline-flex;
+                align-items: center;
+                position: relative;
+                padding: 5px;
+                text-transform: uppercase;
+                font-size: 20px;
+                font-weight: 700;
+                background: #fff;
+                border-radius: 10px;
+                color: #999;
+                z-index: 0;
+            }
+            .pill-button-highlight {
+                transition: all 0.2s;
+                position: absolute;
+                height: calc(100% - 10px);
+                width: 50%;
+                background: linear-gradient(180deg, #667aff 0%, #9e66ff 100%);
+                border-radius: 7px;
+                z-index: 1;
+            }
+            .pill-button-input {
+                display: none;
+                visibility: hidden;
+            }
+            .pill-button-selection {
+                transition: all 0.2s;
+                display: inline-block;
+                position: relative;
+                cursor: pointer;
+                z-index: 2;
+                padding: 5px;
+            }
+            .pill-button-selection_active {
+                color: #fff;
+            }
+        </style>
+    </head>
+    <body
+        class="bg-gradient-to-t from-secondaryPurple to-primaryPurple h-screen flex"
+    >
+        {%csrf_token%}
+        <div
+            class="m-auto p-4 w-11/12 flex flex-col items-center gap-8 h-[90%]"
+        >
+            {% comment %} switcher {% endcomment %}
+            <div>
+                <input
+                    type="checkbox"
+                    class="pill-button-input"
+                    checked="checked"
+                />
+                <span class="pill-button">
+                    <span
+                        class="pill-button-selection pill-button-selection_on pill-button-selection_active"
+                        >Configure</span
+                    >
+                    <span
+                        class="pill-button-selection pill-button-selection_off"
+                        >Generate</span
+                    >
+                    <span class="pill-button-highlight"></span>
+                </span>
+            </div>
+            {% comment %} content {% endcomment %}
+            <div class="bg-white h-full w-full" id="configureDiv">
+                {% comment %} configure block {% endcomment %}
+                <h1>Result CSV Normalization</h1>
+                <form id="pdfForm" method="post" enctype="multipart/form-data">
+                    <input type="file" name="pdf" accept=".csv" />
+                    <button type="button" id="btn">Upload CSV</button>
+                </form>
+                <div id="result"></div>
+            </div>
+            {% comment %} generate block {% endcomment %}
+            <div id="generateDiv" class="flex gap-5 w-full h-full">
+                <div class="w-1/4 bg-white">hello</div>
+                <div class="w-3/4 bg-white">generate</div>
+            </div>
+        </div>
 
-    <script>
-        btn = document.getElementById('btn');
-        btn.addEventListener("click", function(event) {
-            event.preventDefault();
-            form = document.getElementById('pdfForm');
-            const formData = new FormData(form);
-            console.log(formData);
+        <script>
+            let pillButtonOnText = document.querySelector(
+                    ".pill-button-selection_on"
+                ),
+                pillButtonOffText = document.querySelector(
+                    ".pill-button-selection_off"
+                ),
+                pillButtonHighlight = document.querySelector(
+                    ".pill-button-highlight"
+                ),
+                pillButtonOnTextWidth = pillButtonOnText.offsetWidth,
+                pillButtonOffTextWidth = pillButtonOffText.offsetWidth,
+                pillButtonOnTextPosition = {
+                    left: pillButtonOnText.offsetLeft,
+                },
+                pillButtonOffTextPosition = {
+                    left: pillButtonOffText.offsetLeft,
+                },
+                pillButtonInput = document.querySelector(".pill-button-input"),
+                configureDiv = document.querySelector("#configureDiv"),
+                generateDiv = document.querySelector("#generateDiv");
 
-            fetch('http://127.0.0.1:8000/results/normalize/', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.blob())
-            .then(blob => {
-                console.log(blob);
-                const url = window.URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = 'normalized.xlsx';
-                a.textContent = 'Download Normalized excel file';
-                document.getElementById('result').appendChild(a);
-            })
-            .catch(error => {
-                console.error('Fetch Error:', error);
+            pillButtonHighlight.style.width = pillButtonOnTextWidth + "px";
+
+            document
+                .querySelectorAll(".pill-button-selection")
+                .forEach(function (button) {
+                    button.addEventListener("click", function () {
+                        if (
+                            !this.classList.contains(
+                                "pill-button-selection_active"
+                            )
+                        ) {
+                            document
+                                .querySelectorAll(".pill-button-selection")
+                                .forEach(function (element) {
+                                    element.classList.remove(
+                                        "pill-button-selection_active"
+                                    );
+                                });
+                            this.classList.add("pill-button-selection_active");
+
+                            if (
+                                this.classList.contains(
+                                    "pill-button-selection_off"
+                                ) &&
+                                pillButtonInput.checked
+                            ) {
+                                pillButtonInput.checked = false;
+                                configureDiv.style.display = "none";
+                                generateDiv.style.display = "flex";
+                                pillButtonHighlight.style.width =
+                                    pillButtonOffTextWidth + "px";
+                                pillButtonHighlight.style.left =
+                                    pillButtonOffTextPosition.left + "px";
+                            } else {
+                                pillButtonInput.checked = true;
+                                configureDiv.style.display = "block";
+                                generateDiv.style.display = "none";
+                                pillButtonHighlight.style.width =
+                                    pillButtonOnTextWidth + "px";
+                                pillButtonHighlight.style.left =
+                                    pillButtonOnTextPosition.left + "px";
+                            }
+                        }
+                    });
+                });
+
+            if (pillButtonInput.checked) {
+                pillButtonHighlight.style.width = pillButtonOnTextWidth + "px";
+                configureDiv.style.display = "block";
+                generateDiv.style.display = "none";
+            } else {
+                pillButtonHighlight.style.width = pillButtonOffTextWidth + "px";
+                configureDiv.style.display = "none";
+                generateDiv.style.display = "block";
+            }
+
+            // form
+            btn = document.getElementById("btn");
+            btn.addEventListener("click", function (event) {
+                event.preventDefault();
+                form = document.getElementById("pdfForm");
+                const formData = new FormData(form);
+                console.log(formData);
+
+                fetch("http://127.0.0.1:8000/results/normalize/", {
+                    method: "POST",
+                    body: formData,
+                })
+                    .then((response) => response.blob())
+                    .then((blob) => {
+                        console.log(blob);
+                        const url = window.URL.createObjectURL(blob);
+                        const a = document.createElement("a");
+                        a.href = url;
+                        a.download = "normalized.xlsx";
+                        a.textContent = "Download Normalized excel file";
+                        document.getElementById("result").appendChild(a);
+                    })
+                    .catch((error) => {
+                        console.error("Fetch Error:", error);
+                    });
             });
-        });
-    </script>
-</body>
+        </script>
+    </body>
 </html>
